# Specify the minimum version of CMake
cmake_minimum_required(VERSION 3.10)

# Set the project name
project(typing)

# Set the output directory for the executable
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

# Set the C++ compiler flags
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -w")

# Find all .cpp source files in the src directory
file(GLOB SRCS "${CMAKE_SOURCE_DIR}/src/*.cpp")

message(STATUS "Source files: ${SRCS}")

# Add the executable target
add_executable(typing ${SRCS})


# Link the required libraries
target_link_libraries(typing ncurses panel) 

target_include_directories(typing PRIVATE)